feat(eclipse-plugin): enhance BTFViewer Eclipse integration with local file support and improved installation instructions
- Updated the Eclipse plug-in to allow opening both workspace and local `.btf` files, enhancing flexibility for users.
- Revised installation instructions to clarify the process of copying the plug-in JAR into Eclipse's `dropins/` directory and removing older versions.
- Improved documentation to reflect changes in file handling and installation steps, ensuring users have accurate guidance.
- Added a new method for extracting values from JSON messages in the BTFBrowserMessage class, enhancing communication between the viewer and Eclipse.
- Introduced a mechanism to handle trace files exceeding the size limit in the ViewerResourceServer, improving stability and user experience.

These updates aim to provide a more robust and user-friendly experience for analyzing trace files within the Eclipse IDE.